# middle_web_app

./: README.md  catalog_fixture.json  fixture_blog.json  fixture_catalog.json  fixture_group.json  fixture_users.json  group_fixture.json  pyproject.toml  requirements.txt  start_server.sh
blog/: forms.py  models.py  urls.py  views.py
blog/management/commands/: fill_blog.py
blog/migrations/: 0001_initial.py  0002_blogentry_user.py
blog/templates/: blog_base.html  blog_menu.html
blog/templates/blog/: article_delete.html  article_detail.html  blog_form.html  blog_list.html  contacts.html  entry_delete.html  entry_detail.html  index.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  validators.py  views.py
catalog/management/commands/: add_from_fixture.py  add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_category_updated_at_and_more.py
catalog/templates/: base.html  contact.html  home.html  menu.html
catalog/templates/products/: categories.html  category_confirm_delete.html  category_detail.html  category_form.html  contact.html  create_product.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products.html
config/: settings.py  urls.py
media/: file.txt
templates/base_templates/: menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: cau.py
users/migrations/: 0001_initial.py  0002_alter_customuser_groups_alter_customuser_is_active.py
users/templates/users/: profile.html  register.html
